# sketchs

aws-scripts/: :W  amis.txt  create-key-pair-chatgpt.sh  create-static-website.sh  deploy-driversteacherie.sh  driverteacherie.pem  invalidate-s3-object.sh  launch-ec2-chatgpt.sh  launch-ec2.sh  list-amis-chatpgt.sh  s3-policy.json  s3-policy.sh  ssl-certificate.sh
matrix-positioned-graph-path-selection/: app.py  gpt-solution.py
project-2024-04-13-20/: pyproject.toml
